--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=zkui-out.log
+log4j.appender.file.File=zkui.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
@@ -10,4 +10,6 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.com.deem.zkui=INFO, file
+
+log4j.rootLogger=INFO, stdout, file
+log4j.logger.com.deem.zkui=INFO, stdout, file
