adjust jar name and image name

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Miguel Garcia Puyol <miguelpuyol@gmail.com>
 
 WORKDIR /var/app
 
-ADD zkui-*.jar /var/app/zkui.jar
+ADD zkuiboot-*.jar /var/app/zkuiboot.jar
 ADD config.cfg /var/app/config.cfg
 ADD bootstrap.sh /var/app/bootstrap.sh
 
